feat: add hard skills,soft skills, courses

--- a/index.html
+++ b/index.html
@@ -15,5 +15,23 @@
            <p>I am a purposeful specialist, not afraid of difficulties and know how to cope with them. 
             <br>I am searching for new interesting experience developing my new professional skills.
             <br>I am always ready to learn something new and improve my professional level.</p>
+            <h3>Hard skills:</h3>
+            <p>Good knowledge of software testing theory;
+                <br> Preparation of test documentation: test plan, checklist, writing test cases;
+                <br> Knowledge of project lifecycle, understanding of Agile development technologies;
+                <br> Basic knowledge of HTML, SQL, API;
+                <br> Knowledge of tracking defects in JIRA;
+                <br> Skills in Chrome DevTools;
+                <br> Knowledge of basic testing of Web-Applications, Mobile Testing;
+                <br> Knowledge of test design techniques.
+                <br> Microsoft OS practical experience. 
+                </p>
+            <h3>Soft skills:</h3>
+            <p>Communication, teamwork, big data analytics, adaptability, stress resistance</p>
+            <h3>Courses:</h3>
+            <p>2020–2021 "Functional software testing", SENLA. Certificate of Achievement. 
+               <br> 2020–2021 Software testing introduction ( Svyatoslav Kulikov, EPAM learning platform)
+               <br> 2020–2021 Computer science basic (Vitali Shulha, EPAM learning platform)
+                </p>                
              </body>
 </html>
