--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
             <p>2020–2021 "Functional software testing", SENLA. Certificate of Achievement. 
                <br> 2020–2021 Software testing introduction ( Svyatoslav Kulikov, EPAM learning platform)
                <br> 2020–2021 Computer science basic (Vitali Shulha, EPAM learning platform)
-                </p>                
+                </p> 
+            <h3>Languages:</h3> 
+                <p>English – A2+.
+                <br> Russian – native.
+                </p>  
+            <h3>Education:</h3>  
+                <p>2011-2014 Belarus state economic university
+                <br>2006-2011 Polotsk state university 
+                </p>  
+            <h3>Working experience:</h3>  
+                <p>2014-present time - Economist at JSC “SRSU-3 Novopolotsk” (extensive experience in finding the reasons for unprofitable work, took part in inspection of work another organization).
+                <br>2012-2014  - Marketing engineer at JSC “Invet”
+                <br>2011-2012 - Economist at JSC “Invet”
+                </p>     
              </body>
 </html>
