init: create css file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>CV HTML</title>
+        <link rel="stylesheet" href="C:\Program Files\Git\rs_school\rsschool-cv">
     </head>
     <body>
         <h1>Anastasiya Andronava</h1> 
