feat: add style, foto

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <head>
         <meta charset="utf-8">
         <title>CV HTML</title>
-        <link rel="stylesheet" href="C:\Program Files\Git\rs_school\rsschool-cv">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Anastasiya Andronava</h1> 
-        <h3>Contact information</h3>
+        <img src="foto.png" alt="no image">
+        <h3>Contact information:</h3>
         <p>Belarus, Novopolotsk
         <br>e-mail: anastasiya5.88@mail.ru</p>
-        <h3>Summary</h3>
+        <h3>Summary:</h3>
            <p>I am a purposeful specialist, not afraid of difficulties and know how to cope with them. 
             <br>I am searching for new interesting experience developing my new professional skills.
             <br>I am always ready to learn something new and improve my professional level.</p>
