fix: delete whitespaces in code

--- a/index.html
+++ b/index.html
@@ -11,42 +11,37 @@
    <h1>Anastasiya Andronava</h1> 
     <img src="foto.png" alt="no image">
         <h3>Contact information:</h3>
-        <p>Belarus, Novopolotsk
-        <br> <a href="mailto:anastasiya5.88@mail.ru">anastasiya5.88@mail.ru</a></p>
+            <p>Belarus, Novopolotsk
+            <br> <a href="mailto:anastasiya5.88@mail.ru">anastasiya5.88@mail.ru</a></p>
         <h3>Summary:</h3>
             <p>I am a purposeful specialist, not afraid of difficulties and know how to cope with them. 
             <br>I am searching for new interesting experience developing my new professional skills.
             <br>I am always ready to learn something new and improve my professional level.</p>
             <h3>Hard skills:</h3>
-            <p>Good knowledge of software testing theory;
-            <br>Preparation of test documentation: test plan, checklist, writing test cases;
-            <br>Knowledge of project lifecycle, understanding of Agile development technologies;
-            <br>Basic knowledge of HTML, SQL, API;
-            <br>Knowledge of tracking defects in JIRA;
-            <br>Skills in Chrome DevTools;
-            <br>Knowledge of basic testing of Web-Applications, Mobile Testing;
-            <br>Knowledge of test design techniques.
-            <br>Microsoft OS practical experience. 
-            </p>
+                <p>Good knowledge of software testing theory;
+                <br>Preparation of test documentation: test plan, checklist, writing test cases;
+                <br>Knowledge of project lifecycle, understanding of Agile development technologies;
+                <br>Basic knowledge of HTML, SQL, API;
+                <br>Knowledge of tracking defects in JIRA;
+                <br>Skills in Chrome DevTools;
+                <br>Knowledge of basic testing of Web-Applications, Mobile Testing;
+                <br>Knowledge of test design techniques.
+                <br>Microsoft OS practical experience.</p>
             <h3>Soft skills:</h3>
-            <p>Communication, teamwork, big data analytics, adaptability, stress resistance</p>
+                <p>Communication, teamwork, big data analytics, adaptability, stress resistance</p>
             <h3>Courses:</h3>
-            <p>2020–2021 "Functional software testing", SENLA. Certificate of Achievement. 
-            <br>2020–2021 Software testing introduction ( Svyatoslav Kulikov, EPAM learning platform)
-            <br>2020–2021 Computer science basic (Vitali Shulha, EPAM learning platform)
-            </p> 
+                <p>2020–2021 "Functional software testing", SENLA. Certificate of Achievement. 
+                <br>2020–2021 Software testing introduction ( Svyatoslav Kulikov, EPAM learning platform)
+                <br>2020–2021 Computer science basic (Vitali Shulha, EPAM learning platform)</p> 
             <h3>Languages:</h3> 
-            <p>English – A2+.
-            <br> Russian – native.
-            </p>  
+                <p>English – A2+.
+                <br>Russian – native.</p>  
             <h3>Education:</h3>  
-            <p>2011-2014 Belarus state economic university
-            <br>2006-2011 Polotsk state university 
-            </p>  
+                <p>2011-2014 Belarus state economic university
+                <br>2006-2011 Polotsk state university</p>  
             <h3>Working experience:</h3>  
-            <p>2014-present time - Economist at JSC “SRSU-3 Novopolotsk” (extensive experience in finding the reasons for unprofitable work, took part in inspection of work another organization).
-            <br>2012-2014  - Marketing engineer at JSC “Invet”
-            <br>2011-2012 - Economist at JSC “Invet”
-            </p>     
+                <p>2014-present time - Economist at JSC “SRSU-3 Novopolotsk” (extensive experience in finding the reasons for unprofitable work, took part in inspection of work another organization).
+                <br>2012-2014  - Marketing engineer at JSC “Invet”
+                <br>2011-2012 - Economist at JSC “Invet”</p>     
             </body>
 </html>
