fix: edit lang, meta,img,link tags

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>CV HTML</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Anastasiya Andronava</h1>
-    <img src="foto.png" alt="no image" />
+    <img src="foto.png" alt="no image">
     <h3>Contact information:</h3>
     <p>
-      Belarus, Novopolotsk <br />
+      Belarus, Novopolotsk <br>
       <a href="mailto:anastasiya5.88@mail.ru">anastasiya5.88@mail.ru</a>
     </p>
     <h3>Summary:</h3>
@@ -23,13 +23,13 @@
     </p>
     <h3>Hard skills:</h3>
     <p>
-      Good knowledge of software testing theory; <br>
+      Good knowledge of software testing theory;<br>
       Preparation of test documentation: test plan, checklist, writing test
       cases; <br>
       Knowledge of project lifecycle, understanding of Agile development
-      technologies; <br>
+      technologies;<br>
       Basic knowledge of HTML, SQL, API; <br>Knowledge of tracking defects in
-      JIRA; <br>Skills in Chrome DevTools; <br>Knowledge of basic testing of
+      JIRA; <br>Skills in Chrome DevTools;<br>Knowledge of basic testing of
       Web-Applications, Mobile Testing; <br>Knowledge of test design
       techniques.<br>Microsoft OS practical experience.
     </p>
@@ -46,18 +46,18 @@
       (Vitali Shulha, EPAM learning platform)
     </p>
     <h3>Languages:</h3>
-    <p>English – A2+. <br>Russian – native.</p>
+    <p>English – A2+.<br>Russian – native.</p>
     <h3>Education:</h3>
     <p>
-      2011-2014 Belarus state economic university <br>2006-2011 Polotsk state
+      2011-2014 Belarus state economic university<br>2006-2011 Polotsk state
       university
     </p>
     <h3>Working experience:</h3>
     <p>
       2014-present time - Economist at JSC “SRSU-3 Novopolotsk” (extensive
       experience in finding the reasons for unprofitable work, took part in
-      inspection of work another organization). <br>2012-2014 - Marketing
-      engineer at JSC “Invet” <br>2011-2012 - Economist at JSC “Invet”
+      inspection of work another organization).<br>2012-2014 - Marketing
+      engineer at JSC “Invet”<br>2011-2012 - Economist at JSC “Invet”
     </p>
   </body>
 </html>
