feat: add header, main

--- a/index.html
+++ b/index.html
@@ -2,17 +2,55 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>CV HTML</title>
+    <title>CV HTML RSSCHOOl</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Anastasiya Andronava</h1>
-    <img src="foto.png" alt="no image">
-    <h3>Contact information:</h3>
-    <p>
-      Belarus, Novopolotsk <br>
-      <a href="mailto:anastasiya5.88@mail.ru">anastasiya5.88@mail.ru</a>
-    </p>
+    <div class="center-page">
+      <div class="first-column">
+        <header class="font-header">
+          <img src="foto.png" alt="no image">
+          <h1>Anastasiya Andronava</h1>
+          <h2>Junior front-end developer</h2>
+        </header>
+        <main>
+          <section>
+            <h3>Contact information:</h3>
+            <ul>
+              <li>Belarus, Novopolotsk </li>
+              <li><a href="mailto:anastasiya5.88@mail.ru">anastasiya5.88@mail.ru</a></li>
+              <li><a href="https://www.linkedin.com/in/anastasiya-a-75b79b229/">LinkedIn</a></li>
+            </ul>
+          </section>
+          <section>
+            <h3>Languages:</h3>
+             <ul>
+              <li>English – A2+.</li>
+              <li>Russian – native.</li>
+            </ul>
+          </section>
+          <section class=".hard-skills">
+            <h3 class="h3-style">Hard skills:</h3>
+              <ol>
+                <li>Good knowledge of software testing theory;</li>
+                <li>Preparation of test documentation: test plan, checklist, writing test cases;</li>
+                <li>Knowledge of project lifecycle, understanding of Agile development technologies;</li>
+                <li>Basic knowledge of HTML, SQL, API; <br>Knowledge of tracking defects in JIRA;</li>
+                <li>Basic knowledge of HTML, SQL, API;</li>
+                <li>Knowledge of tracking defects in JIRA;</li>
+                <li>Skills in Chrome DevTools;</li>
+                <li>Knowledge of basic testing of Web-Applications, Mobile Testing;</li>
+                <li>Knowledge of test design techniques;</li>
+                <li>Microsoft OS practical experience;</li>
+              </ol>
+          </section>
+       <main>
+    </div> 
+      <aside>
+
+
+    </aside>      
+    
     <h3>Summary:</h3>
     <p>
       I am a purposeful specialist, not afraid of difficulties and know how to
@@ -44,8 +82,7 @@
       Kulikov, EPAM learning platform) <br>2020–2021 Computer science basic
       (Vitali Shulha, EPAM learning platform)
     </p>
-    <h3>Languages:</h3>
-    <p>English – A2+.<br>Russian – native.</p>
+    
     <h3>Education:</h3>
     <p>
       2011-2014 Belarus state economic university<br>2006-2011 Polotsk state
