feat: add new style, add github icon

--- a/index.html
+++ b/index.html
@@ -20,29 +20,28 @@
                 <h2>Junior front-end developer</h2>
           </header>
           <main>
-            <section>
-              <h3>Contact information:</h3>
+            <section class="section">
+              <h3>Contact information</h3>
                 <ul>
                   <li>Belarus, Novopolotsk </li>
-                  <li><a href="mailto:anastasiya5.88@mail.ru">anastasiya5.88@mail.ru</a></li>
+                  <li><a href="mailto:anastasiya5.88@mail.ru">e-mail</a></li>
                   <li><a href="https://www.linkedin.com/in/anastasiya-a-75b79b229/">LinkedIn</a></li>
                 </ul>
             </section>
-            <section>
-              <h3>Languages:</h3>
+            <section class="section">
+              <h3>Languages</h3>
                 <ul>
                   <li>English – A2+.</li>
                   <li>Russian – native.</li>
                 </ul>
             </section>
-            <section class=".hard-skills">
+            <section class="section">
               <h3 class="h3-style">Hard skills:</h3>
                 <ul>
                   <li>Good knowledge of software testing theory;</li>
                   <li>Preparation of test documentation: test plan, checklist,<br>writing test cases;</li>
                   <li>Knowledge of project lifecycle;</li>
                   <li>Understanding of Agile development technologies;</li>
-                  <li>Basic knowledge of HTML, SQL, API; <br>Knowledge of tracking defects in JIRA;</li>
                   <li>Basic knowledge of HTML, SQL, API;</li>
                   <li>Knowledge of tracking defects in JIRA;</li>
                   <li>Skills in Chrome DevTools;</li>
@@ -54,17 +53,16 @@
           <main>
         </div> 
         <aside class="second-column">
-          <section> 
-            <h3>Summary:</h3>
-              <p>
-                I am a purposeful specialist, not afraid of difficulties <br>and know how to
-                cope with them.<br>I am searching for new interesting experience
-                developing my new professional skills.<br>I am always ready to learn
-                something new and <br>improve my professional level.
-              </p>
+          <section class="section"> 
+            <h3>About me</h3>
+              <ul>
+                <li>I am a purposeful specialist, not afraid of difficulties and know how to cope with them.</li>
+                <li>I am searching for new interesting experience developing my new professional skills.</li>
+                <li>I am always ready to learn something new and <br>improve my professional level.</li>
+              </ul>
           </section>
-          <section> 
-            <h3>Soft skills:</h3>
+          <section class="section"> 
+            <h3>Soft skills</h3>
               <ul>
                 <li>Communication</li>
                 <li>Teamwork</li>
@@ -73,22 +71,23 @@
                 <li>Stress resistance</li>
               </ul>
           </section>
-          <section>
-            <h3>Courses:</h3>
+          <section class="section">
+            <h3>Courses</h3>
               <ul>
                 <li> 2020–2021 "Functional software testing", SENLA. Certificate of Achievement.</li>
                 <li>2020–2021 Software testing introduction ( Svyatoslav Kulikov, EPAM learning platform)</li>
                 <li>2020–2021 Computer science basic (Vitali Shulha, EPAM learning platform)</li>
               </ul>
           </section>
-          <section>
-            <h3>Education:</h3>
-            <p>
-              2011-2014 Belarus state economic university<br>2006-2011 Polotsk state university
-              </p>
+          <section class="section">
+            <h3>Education</h3>
+              <ul>
+                <li>2011-2014 Belarus state economic university</li>
+                <li>2006-2011 Polotsk state university</li>
+              </ul>
           </section>
-          <section> 
-            <h3>Working experience:</h3>
+          <section class="section"> 
+            <h3>Working experience</h3>
              <ul>
                <li>2014-present time - Economist at JSC “SRSU-3 Novopolotsk” (extensive
                experience in finding the reasons for unprofitable work, took part in
@@ -99,10 +98,9 @@
           </section>
         </aside>      
       </div> 
-        <footer>
-          <p>© 2022</p>
-          <a class="my-github" href="https://github.com/anastan588">Visit my GiHub</a>
-          <a href="https://rs.school/">RSS SCHOOL</a>
+        <footer class="section">
+          <a class="my-github" href="https://github.com/anastan588"><img src="icons/github.png" alt="GitHub">Visit my GitHub</a>
+          <a class="rs-school" href="https://rs.school/">RS SCHOOL © 2022</a>
         </footer>
     </div>
   </body>
