feat: add nav bar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
   </head>
   <body class="body">
     <div class="center-page">
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+          <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+          <li class="nav-item"><a href="#skills" class="nav-link">Hard skills</a></li>
+          <li class="nav-item"><a href="#sskills" class="nav-link">Soft skills</a></li>
+          <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+          <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+          <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+          <li class="nav-item"><a href="#work" class="nav-link">Working experience</a></li>
+        </ul>
+      </nav>
       <div class="two-columns">
         <div class="first-column">
           <header class="header">
@@ -21,7 +33,7 @@
           </header>
           <main>
             <section class="section">
-              <h3>Contact information</h3>
+              <h3 id="contacts">Contact information</h3>
                 <ul>
                   <li>Belarus, Novopolotsk </li>
                   <li><a href="mailto:anastasiya5.88@mail.ru">e-mail</a></li>
@@ -29,14 +41,14 @@
                 </ul>
             </section>
             <section class="section">
-              <h3>Languages</h3>
+              <h3 id="languages">Languages</h3>
                 <ul>
                   <li>English – A2+.</li>
                   <li>Russian – native.</li>
                 </ul>
             </section>
             <section class="section">
-              <h3 class="h3-style">Hard skills:</h3>
+              <h3 class="h3-style" id="skills">Hard skills:</h3>
                 <ul>
                   <li>Good knowledge of software testing theory;</li>
                   <li>Preparation of test documentation: test plan, checklist,<br>writing test cases;</li>
@@ -54,7 +66,7 @@
         </div> 
         <aside class="second-column">
           <section class="section"> 
-            <h3>About me</h3>
+            <h3 id="summary">About me</h3>
               <ul>
                 <li>I am a purposeful specialist, not afraid of difficulties and know how to cope with them.</li>
                 <li>I am searching for new interesting experience developing my new professional skills.</li>
@@ -62,7 +74,7 @@
               </ul>
           </section>
           <section class="section"> 
-            <h3>Soft skills</h3>
+            <h3 id="sskills">Soft skills</h3>
               <ul>
                 <li>Communication</li>
                 <li>Teamwork</li>
@@ -72,7 +84,7 @@
               </ul>
           </section>
           <section class="section">
-            <h3>Courses</h3>
+            <h3 id="courses">Courses</h3>
               <ul>
                 <li> 2020–2021 "Functional software testing", SENLA. Certificate of Achievement.</li>
                 <li>2020–2021 Software testing introduction ( Svyatoslav Kulikov, EPAM learning platform)</li>
@@ -80,14 +92,14 @@
               </ul>
           </section>
           <section class="section">
-            <h3>Education</h3>
+            <h3 id="education">Education</h3>
               <ul>
                 <li>2011-2014 Belarus state economic university</li>
                 <li>2006-2011 Polotsk state university</li>
               </ul>
           </section>
           <section class="section"> 
-            <h3>Working experience</h3>
+            <h3 id="work">Working experience</h3>
              <ul>
                <li>2014-present time - Economist at JSC “SRSU-3 Novopolotsk” (extensive
                experience in finding the reasons for unprofitable work, took part in
@@ -100,7 +112,7 @@
       </div> 
         <footer class="section">
           <a class="my-github" href="https://github.com/anastan588"><img src="icons/github.png" alt="GitHub">Visit my GitHub</a>
-          <a class="rs-school" href="https://rs.school/">RS SCHOOL © 2022</a>
+          <a class="rs-school" href="https://rs.school/"><img src="icons/rs_school.svg" alt="RS_School" weight="80" height="30">© 2022</a>
         </footer>
     </div>
   </body>
