--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
           </header>
           <main>
             <section class="section">
-              <h3 id="contacts">Contact information</h3>
+              <h3 id="contacts"><img src="icons/file.png" alt="item" width="26" height="26">Contact information</h3>
               <ul>
-                <li>Belarus, Novopolotsk</li>
-                <li><a href="mailto:anastasiya5.88@mail.ru">e-mail</a></li>
-                <li><a href="https://www.linkedin.com/in/anastasiya-a-75b79b229/">LinkedIn</a></li>
+                <li><img src="icons/place.png" alt="place" width="26" height="26">Belarus, Novopolotsk</li>
+                <li><img src="icons/world.png" alt="world" width="26" height="26"><a href="mailto:anastasiya5.88@mail.ru" target="_blank">e-mail</a></li>
+                <li><img src="icons/world.png" alt="world" width="26" height="26"><a href="https://www.linkedin.com/in/anastasiya-a-75b79b229/" target="_blank">LinkedIn</a></li>
               </ul>
             </section>
             <section class="section">
-              <h3 id="languages">Languages</h3>
+              <h3 id="languages"><img src="icons/file.png" alt="item" width="26" height="26">Languages</h3>
               <ul>
                 <li>English – A2+.</li>
                 <li>Russian – native.</li>
               </ul>
             </section>
             <section class="section">
-              <h3 class="h3-style" id="skills">Hard skills:</h3>
+              <h3 class="h3-style" id="skills"><img src="icons/file.png" alt="item" width="26" height="26">Hard skills</h3>
               <ul>
                 <li>Good knowledge of software testing theory;</li>
                 <li>Preparation of test documentation: test plan, checklist,<br>writing
@@ -70,7 +70,7 @@
         </div>
         <aside class="second-column">
           <section class="section">
-            <h3 id="summary">About me</h3>
+            <h3 id="summary"><img src="icons/user.png" alt="user" width="26" height="26">About me</h3>
             <ul>
               <li>I am a purposeful specialist, not afraid of difficulties and know how to cope with them.</li>
               <li>I am searching for new interesting experience developing my new professional skills.</li>
@@ -78,7 +78,7 @@
             </ul>
           </section>
           <section class="section">
-            <h3 id="sskills">Soft skills</h3>
+            <h3 id="sskills"><img src="icons/file.png" alt="item" width="26" height="26">Soft skills</h3>
             <ul>
               <li>Communication</li>
               <li>Teamwork</li>
@@ -88,7 +88,7 @@
             </ul>
           </section>
           <section class="section">
-            <h3 id="courses">Courses</h3>
+            <h3 id="courses"><img src="icons/file.png" alt="item" width="26" height="26">Courses</h3>
             <ul>
               <li>2020–2021 "Functional software testing", SENLA. Certificate of Achievement.</li>
               <li>2020–2021 Software testing introduction (Svyatoslav Kulikov, EPAM learning platform)</li>
@@ -96,14 +96,14 @@
             </ul>
           </section>
           <section class="section">
-            <h3 id="education">Education</h3>
+            <h3 id="education"><img src="icons/file.png" alt="item" width="26" height="26">Education</h3>
             <ul>
               <li>2011-2014 Belarus state economic university</li>
               <li>2006-2011 Polotsk state university</li>
             </ul>
           </section>
           <section class="section">
-            <h3 id="work">Working experience</h3>
+            <h3 id="work"><img src="icons/file.png" alt="item" width="26" height="26">Working experience</h3>
             <ul>
               <li>
                 2014-present time - Economist at JSC “SRSU-3 Novopolotsk”
@@ -115,15 +115,16 @@
             </ul>
           </section>
           <section class="section">
-            <h3 id="projects">Projects</h3>
+            <h3 id="projects"><img src="icons/file.png" alt="item" width="26" height="26">Projects</h3>
              <ul>
-              <li><a class="projects" href=https://anastan588.github.io/rsschool-cv/ target="_blank">My Curriculum vitae</a></li>
+              <li><a class="projects" href="https://anastan588.github.io/rsschool-cv/" target="_blank">My Curriculum vitae(HTML)</a></li>
+              <li><a class="projects" href="https://anastan588.github.io/rsschool-cv/cv" target="_blank">My Curriculum vitae(Markdown)</a></li>
              </ul>
           </section>
           <section class="section">
-            <h3 id="code">Example of code</h3>
+            <h3 id="code"><img src="icons/file.png" alt="item" width="26" height="26">Example of code</h3>
               <ul>
-                <li><pre>console.log('Hello, World!')</pre></li>
+                <li><pre>console.log('Hello, World!');</pre></li>
               </ul>
           </section>
         </aside>
