--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body class="body">
     <div class="center-page">
@@ -124,7 +123,7 @@
           <section class="section">
             <h3 id="code"><img src="icons/file.png" alt="item" width="26" height="26">Example of code</h3>
               <ul>
-                <li><pre>console.log('Hello, World!');</pre></li>
+                <li><pre><code>console.log('Hello, World!');</code></pre></li>
               </ul>
           </section>
         </aside>
