--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV HTML RSSCHOOL</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="icons/apple-touch-icon.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="icons/favicon-32x32.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="icons/favicon-16x16.png"
-    />
+    >
   </head>
   <body class="body">
     <div class="wrapper">
@@ -66,7 +66,7 @@
               class="header-image"
               src="AnastasiyaAndronova.jpg"
               alt="no image"
-            />
+            >
           </div>
 
           <h1>Anastasiya Andronava</h1>
@@ -75,7 +75,7 @@
         </section>
         <section class="section">
           <div id="summary" class="section_name">
-            <img src="icons/user.png" alt="user" width="26" height="26" />
+            <img src="icons/user.png" alt="user" width="26" height="26">
             <h3>About me</h3>
           </div>
           <ul class="section_list">
@@ -95,7 +95,7 @@
         </section>
         <section class="section">
           <div id="sskills" class="section_name">
-            <img src="icons/file.png" alt="item" width="26" height="26" />
+            <img src="icons/file.png" alt="item" width="26" height="26">
             <h3>Soft skills</h3>
           </div>
           <ul class="section_list">
@@ -108,7 +108,7 @@
         </section>
         <section class="section">
           <div class="section_name" id="skills">
-            <img src="icons/file.png" alt="item" width="26" height="26" />
+            <img src="icons/file.png" alt="item" width="26" height="26">
             <h3>Hard skills</h3>
           </div>
           <ul class="section_list">
@@ -131,7 +131,7 @@
         </section>
         <section class="section">
           <div id="contacts" class="section_name">
-            <img src="icons/file.png" alt="item" width="26" height="26" />
+            <img src="icons/file.png" alt="item" width="26" height="26">
             <h3>Contact information</h3>
           </div>
           <ul class="section_list">
@@ -144,14 +144,14 @@
               />Belarus, Novopolotsk
             </li>
             <li>
-              <img src="icons/world.png" alt="world" width="26" height="26" /><a
+              <img src="icons/world.png" alt="world" width="26" height="26"><a
                 href="mailto:anastasiya5.88@mail.ru"
                 target="_blank"
                 >e-mail</a
               >
             </li>
             <li>
-              <img src="icons/world.png" alt="world" width="26" height="26" /><a
+              <img src="icons/world.png" alt="world" width="26" height="26"><a
                 href="https://www.linkedin.com/in/anastasiya-a-75b79b229/"
                 target="_blank"
                 >LinkedIn</a
@@ -161,7 +161,7 @@
         </section>
         <section class="section">
           <div id="courses" class="section_name">
-            <img src="icons/file.png" alt="item" width="26" height="26" />
+            <img src="icons/file.png" alt="item" width="26" height="26">
             <h3>Courses</h3>
           </div>
           <ul class="section_list">
@@ -201,7 +201,7 @@
         </section>
         <section class="section section_projects">
           <div id="projects" class="section_name">
-            <img src="icons/file.png" alt="item" width="26" height="26" />
+            <img src="icons/file.png" alt="item" width="26" height="26">
             <h3>My projects</h3>
           </div>
           <ul class="section_list">
@@ -290,7 +290,7 @@
 
         <section class="section">
           <div id="work" class="section_name">
-            <img src="icons/file.png" alt="item" width="26" height="26" />
+            <img src="icons/file.png" alt="item" width="26" height="26">
             <h3>Working experience</h3>
           </div>
           <ul class="section_list">
@@ -306,7 +306,7 @@
 
         <section class="section">
           <div id="code" class="section_name">
-            <img src="icons/file.png" alt="item" width="26" height="26" />
+            <img src="icons/file.png" alt="item" width="26" height="26">
             <h3>Example of code</h3>
           </div>
           <ul class="section_list">
@@ -325,7 +325,7 @@
           </ul>
         </section>
         <section class="section_projects_examples">
-          <div id="work" class="section_name_examples">
+          <div class="section_name_examples">
             <h3>Project examples</h3>
           </div>
           <ul class="section_list_examples">
@@ -338,7 +338,7 @@
                   class="example_image"
                   alt="example"
                   src="/icons/screencapture-anastan588-github-io-rsschool-cv-2022-11-18-13_52_18.png"
-              /></a>
+              ></a>
             </li>
             <li class="section_list_examples_item">
               <a
@@ -349,7 +349,7 @@
                   class="example_image"
                   alt="example"
                   src="/icons/screencapture-anastan588-github-io-rsschool-cv-cv-2022-12-22-16_02_28.png"
-              /></a>
+              ></a>
             </li>
             <li class="section_list_examples_item">
               <a
@@ -360,7 +360,7 @@
                   class="example_image"
                   alt="example"
                   src="/icons/screencapture-anastan588-github-io-travel-2022-11-18-13_54_12.png"
-              /></a>
+              ></a>
             </li>
             <li class="section_list_examples_item">
               <a
@@ -371,7 +371,7 @@
                   class="example_image"
                   alt="example"
                   src="/icons/screencapture-anastan588-github-io-webdev-2022-11-18-13_55_40.png"
-              /></a>
+              ></a>
             </li>
             <li class="section_list_examples_item">
               <a
@@ -382,7 +382,7 @@
                   class="example_image"
                   alt="example"
                   src="/icons/screencapture-anastan588-github-io-online-zoo-2022-11-18-13_56_07.png"
-              /></a>
+              ></a>
             </li>
             <li class="section_list_examples_item">
               <a
@@ -393,7 +393,7 @@
                   class="example_image"
                   alt="example"
                   src="/icons/screencapture-anastan588-github-io-yalow-2022-11-18-13_57_49.png"
-              /></a>
+              ></a>
             </li>
             <li class="section_list_examples_item">
               <a
@@ -404,7 +404,7 @@
                   class="example_image"
                   alt="example"
                   src="/icons/screencapture-anastan588-github-io-momentum-2022-11-18-13_55_05.png"
-              /></a>
+              ></a>
             </li>
             <li class="section_list_examples_item">
               <a
@@ -415,7 +415,7 @@
                   class="example_image"
                   alt="example"
                   src="/icons/screencapture-anastan588-github-io-books-shop-2022-11-18-13_58_35.png"
-              /></a>
+              ></a>
             </li>
             <li class="section_list_examples_item">
               <a
@@ -426,7 +426,7 @@
                   class="example_image"
                   alt="example"
                   src="/icons/screencapture-rolling-scopes-school-github-io-anastan588-JSFELT2022Q3-calculator-2022-11-18-13_59_18.png"
-              /></a>
+              ></a>
             </li>
             <li class="section_list_examples_item">
               <a
@@ -437,7 +437,7 @@
                   class="example_image"
                   alt="example"
                   src="/icons/screencapture-anastan588-github-io-songbird-quiz-html-2022-11-18-14_19_03.png"
-              /></a>
+              ></a>
             </li>
           </ul>
         </section>
@@ -454,7 +454,7 @@
               alt="RS_School"
               width="80"
               height="30"
-            />© 2022</a
+            >© 2022</a
           >
         </div>
         <div>
@@ -463,7 +463,7 @@
             href="https://github.com/anastan588"
             target="_blank"
           >
-            <img src="icons/icons8-github-48.png" alt="GitHub" />Visit my GitHub</a
+            <img src="icons/icons8-github-48.png" alt="GitHub">Visit my GitHub</a
           >
         </div>
       </footer>
