--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 alt="place"
                 width="26"
                 height="26"
-              />Belarus, Novopolotsk
+              >Belarus, Novopolotsk
             </li>
             <li>
               <img src="icons/world.png" alt="world" width="26" height="26"><a
@@ -181,7 +181,7 @@
         </section>
         <section class="section">
           <div id="languages" class="section_name">
-            <img src="icons/file.png" alt="item" width="26" height="26" />
+            <img src="icons/file.png" alt="item" width="26" height="26">
             <h3>Languages</h3>
           </div>
           <ul class="section_list">
@@ -191,7 +191,7 @@
         </section>
         <section class="section">
           <div id="education" class="section_name">
-            <img src="icons/file.png" alt="item" width="26" height="26" />
+            <img src="icons/file.png" alt="item" width="26" height="26">
             <h3>Education</h3>
           </div>
           <ul class="section_list">
